k8s/angular-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - angular-k8s.code-invention.com
    secretName: angular-tls
  rules:
  - host: angular-k8s.code-invention.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              number: 80
